force-app/force-app/main/default/objects/Opportunity/fields/Acceptance_Methods__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Methods__c</fullName>
    <description>Acceptance Methods - Payment types accepted</description>
    <label>Acceptance Methods</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Cards</fullName>
                <default>true</default>
                <label>Credit Cards</label>
            </value>
            <value>
                <fullName>Debit Cards</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>