force-app/force-app/main/default/objects/Opportunity/fields/Adobe_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Agreement_Id__c</fullName>
    <description>Adobe Agreement Id - Adobe Sign ID</description>
    <label>Adobe Agreement Id</label>
    <type>Text</type>
    <length>80</length>
</CustomField>