force-app/force-app/main/default/objects/Opportunity/fields/Adobe_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Adobe_Agreement_Status__c</fullName>
    <description>Adobe Agreement Status - Agreement status</description>
    <label>Adobe Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Out for Signature</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>