force-app/force-app/main/default/objects/Opportunity/fields/Agreement_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent_Date__c</fullName>
    <description>Agreement Sent Date - When sent for signature</description>
    <label>Agreement Sent Date</label>
    <type>DateTime</type>
</CustomField>