force-app/force-app/main/default/objects/Opportunity/fields/Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Signed_Date__c</fullName>
    <description>Agreement Signed Date - When signed</description>
    <label>Agreement Signed Date</label>
    <type>DateTime</type>
</CustomField>