force-app/force-app/main/default/objects/Opportunity/fields/Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_URL__c</fullName>
    <description>Agreement URL - Link to agreement</description>
    <label>Agreement URL</label>
    <type>Url</type>
</CustomField>