force-app/force-app/main/default/objects/Opportunity/fields/Agreement_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Viewed_Date__c</fullName>
    <description>Agreement Viewed Date - When viewed by signer</description>
    <label>Agreement Viewed Date</label>
    <type>DateTime</type>
</CustomField>