force-app/force-app/main/default/objects/Opportunity/fields/Application_Industry__c.field-meta.xml
<CustomField>
    <fullName>Application_Industry__c</fullName>
    <description>Application Industry - Detailed industry category</description>
    <label>Application Industry</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application_Industry_GVS</fullName>
                <default>true</default>
                <label>Application_Industry_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>