force-app/force-app/main/default/objects/Opportunity/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Approved Date - When approved</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>