force-app/force-app/main/default/objects/Opportunity/fields/Average_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Average_Ticket__c</fullName>
    <description>Average Ticket - Sertifi #9; Ticket for THIS deal</description>
    <label>Average Ticket</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>