force-app/force-app/main/default/objects/Opportunity/fields/B2B_Percentage__c.field-meta.xml
<CustomField>
    <fullName>B2B_Percentage__c</fullName>
    <description>B2B Percentage - % business customers</description>
    <label>B2B Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>