force-app/force-app/main/default/objects/Opportunity/fields/B2C_Percentage__c.field-meta.xml
<CustomField>
    <fullName>B2C_Percentage__c</fullName>
    <description>B2C Percentage - % consumer customers</description>
    <label>B2C Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>