force-app/force-app/main/default/objects/Opportunity/fields/Billing_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Billing_Descriptor__c</fullName>
    <description>Billing Descriptor - Statement descriptor</description>
    <label>Billing Descriptor</label>
    <type>Text</type>
    <length>25</length>
</CustomField>