force-app/force-app/main/default/objects/Opportunity/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <description>Business Model - B2B, B2C, Subscription, Hybrid</description>
    <label>Business Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business_Model_GVS</fullName>
                <default>true</default>
                <label>Business_Model_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>