force-app/force-app/main/default/objects/Opportunity/fields/Card_Not_Present_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Card_Not_Present_Percentage__c</fullName>
    <description>Card Not Present Percentage - % card-not-present</description>
    <label>Card Not Present Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>