force-app/force-app/main/default/objects/Opportunity/fields/Card_Present_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Card_Present_Percentage__c</fullName>
    <description>Card Present Percentage - % card-present transactions</description>
    <label>Card Present Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>