force-app/force-app/main/default/objects/Opportunity/fields/Chargeback_Rate__c.field-meta.xml
<CustomField>
    <fullName>Chargeback_Rate__c</fullName>
    <description>Chargeback Rate - Last 3-6 months</description>
    <label>Chargeback Rate</label>
    <required>true</required>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>