force-app/force-app/main/default/objects/Opportunity/fields/Created_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Lead__c</fullName>
    <description>Created From Lead - Source Lead ID</description>
    <label>Created From Lead</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>lead</referenceTo>
    <relationshipName>CreatedFromLead</relationshipName>
</CustomField>