force-app/force-app/main/default/objects/Opportunity/fields/Customer_Account_System__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_System__c</fullName>
    <description>Customer Account System - Customer account management</description>
    <label>Customer Account System</label>
    <type>Text</type>
    <length>100</length>
</CustomField>