force-app/force-app/main/default/objects/Opportunity/fields/Days_Between_Order_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Order_Delivery__c</fullName>
    <description>Days Between Order &amp; Delivery - Delivery timeframe</description>
    <label>Days Between Order &amp; Delivery</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>