force-app/force-app/main/default/objects/Opportunity/fields/Days_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Sign__c</fullName>
    <description>Days to Sign - Time to signature</description>
    <label>Days to Sign</label>
    <type>Formula</type>
    <formula>Agreement_Signed_Date__c - Agreement_Sent_Date__c</formula>
    <formulaTreatBlankAs>BlankAsZero</formulaTreatBlankAs>
</CustomField>