force-app/force-app/main/default/objects/Opportunity/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <description>Decline Reason - Why declined</description>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decline_Reason_GVS</fullName>
                <default>true</default>
                <label>Decline_Reason_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>