force-app/force-app/main/default/objects/Opportunity/fields/Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Date__c</fullName>
    <description>Declined Date - When declined</description>
    <label>Declined Date</label>
    <type>DateTime</type>
</CustomField>