force-app/force-app/main/default/objects/Opportunity/fields/Email_Sequence_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Sequence_Status__c</fullName>
    <description>Email Sequence Status - Not Started; Active; Paused; Completed; Opted Out</description>
    <label>Email Sequence Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email_Sequence_Status_GVS</fullName>
                <default>true</default>
                <label>Email_Sequence_Status_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>