force-app/force-app/main/default/objects/Opportunity/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID - External system integration ID (External ID, Unique)</description>
    <label>External ID</label>
    <type>Text</type>
    <length>80</length>
</CustomField>