force-app/force-app/main/default/objects/Opportunity/fields/Fulfillment_Method__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Method__c</fullName>
    <description>Fulfillment Method - How orders fulfilled</description>
    <label>Fulfillment Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfillment_Method_GVS</fullName>
                <default>true</default>
                <label>Fulfillment_Method_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>