force-app/force-app/main/default/objects/Opportunity/fields/Fulfillment_Methods_Detail__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Methods_Detail__c</fullName>
    <description>Fulfillment Methods Detail - Fulfillment approaches</description>
    <label>Fulfillment Methods Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop Ship</fullName>
                <default>true</default>
                <label>Drop Ship</label>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>