force-app/force-app/main/default/objects/Opportunity/fields/Game_Type__c.field-meta.xml
<CustomField>
    <fullName>Game_Type__c</fullName>
    <description>Game Type - CONDITIONAL: Only if gaming industry</description>
    <label>Game Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casino</fullName>
                <default>true</default>
                <label>Casino</label>
            </value>
            <value>
                <fullName>Sports Betting</fullName>
            </value>
            <value>
                <fullName>Fantasy Sports</fullName>
            </value>
            <value>
                <fullName>Skill Games</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>