force-app/force-app/main/default/objects/Opportunity/fields/Highest_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Highest_Ticket__c</fullName>
    <description>Highest Ticket - Highest single transaction</description>
    <label>Highest Ticket</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>