force-app/force-app/main/default/objects/Opportunity/fields/Internet_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Internet_Percentage__c</fullName>
    <description>Internet Percentage - % e-commerce</description>
    <label>Internet Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>