force-app/force-app/main/default/objects/Opportunity/fields/ISO_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>ISO_Match_Score__c</fullName>
    <description>ISO Match Score - Algorithm confidence (0-100)</description>
    <label>ISO Match Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>