force-app/force-app/main/default/objects/Opportunity/fields/Mail_Order_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Mail_Order_Percentage__c</fullName>
    <description>Mail Order Percentage - % mail/phone order</description>
    <label>Mail Order Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>