force-app/force-app/main/default/objects/Opportunity/fields/Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Volume__c</fullName>
    <description>Monthly Volume - Sertifi #8; Volume for THIS deal</description>
    <label>Monthly Volume</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>