force-app/force-app/main/default/objects/Opportunity/fields/Phone_Order_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Phone_Order_Percentage__c</fullName>
    <description>Phone Order Percentage - % phone orders</description>
    <label>Phone Order Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>