force-app/force-app/main/default/objects/Opportunity/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <description>Portal URL - Link to portal for merchant</description>
    <label>Portal URL</label>
    <type>Formula</type>
    <formula>Community URL formula</formula>
    <formulaTreatBlankAs>BlankAsBlank</formulaTreatBlankAs>
</CustomField>