force-app/force-app/main/default/objects/Opportunity/fields/Primary_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_Service__c</fullName>
    <description>Primary Product/Service - What they sell/offer</description>
    <label>Primary Product/Service</label>
    <type>Text</type>
    <length>255</length>
</CustomField>