force-app/force-app/main/default/objects/Opportunity/fields/Recommended_ISO_1__c.field-meta.xml
<CustomField>
    <fullName>Recommended_ISO_1__c</fullName>
    <description>Recommended ISO 1 - Top match from algorithm</description>
    <label>Recommended ISO 1</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>account</referenceTo>
    <relationshipName>RecommendedISO1</relationshipName>
</CustomField>