force-app/force-app/main/default/objects/Opportunity/fields/Recommended_ISO_2__c.field-meta.xml
<CustomField>
    <fullName>Recommended_ISO_2__c</fullName>
    <description>Recommended ISO 2 - Second match</description>
    <label>Recommended ISO 2</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>account</referenceTo>
    <relationshipName>RecommendedISO2</relationshipName>
</CustomField>