force-app/force-app/main/default/objects/Opportunity/fields/Recommended_ISO_3__c.field-meta.xml
<CustomField>
    <fullName>Recommended_ISO_3__c</fullName>
    <description>Recommended ISO 3 - Third match</description>
    <label>Recommended ISO 3</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>account</referenceTo>
    <relationshipName>RecommendedISO3</relationshipName>
</CustomField>