force-app/force-app/main/default/objects/Opportunity/fields/Refund_Policy__c.field-meta.xml
<CustomField>
    <fullName>Refund_Policy__c</fullName>
    <description>Refund Policy - Return/refund terms</description>
    <label>Refund Policy</label>
    <type>Text</type>
    <length>500</length>
</CustomField>