force-app/force-app/main/default/objects/Opportunity/fields/Restocking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Restocking_Fee__c</fullName>
    <description>Restocking Fee - Return restocking fee %</description>
    <label>Restocking Fee</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>