force-app/force-app/main/default/objects/Opportunity/fields/Retail_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Retail_Percentage__c</fullName>
    <description>Retail Percentage - % card-present retail</description>
    <label>Retail Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>