force-app/force-app/main/default/objects/Opportunity/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Risk Score - Calculated risk score</description>
    <label>Risk Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>