force-app/force-app/main/default/objects/Opportunity/fields/Seasonal_Variance__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Variance__c</fullName>
    <description>Seasonal Variance - Seasonal business?</description>
    <label>Seasonal Variance</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>