force-app/force-app/main/default/objects/Opportunity/fields/Submitted_to_ISO_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_ISO_Date__c</fullName>
    <description>Submitted to ISO Date - When sent to ISO</description>
    <label>Submitted to ISO Date</label>
    <type>DateTime</type>
</CustomField>