force-app/force-app/main/default/objects/Opportunity/fields/Test_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_Login_URL__c</fullName>
    <description>Test Login URL - CONDITIONAL: Only if gaming industry</description>
    <label>Test Login URL</label>
    <type>Url</type>
</CustomField>