force-app/force-app/main/default/objects/Opportunity/fields/Third_Party_CC_Access__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_CC_Access__c</fullName>
    <description>Third Party CC Access - Third parties access card data?</description>
    <label>Third Party CC Access</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>