force-app/force-app/main/default/objects/Opportunity/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Tier - Tier 1, 2, 3, ACH, Offshore</description>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier_Type_GVS</fullName>
                <default>true</default>
                <label>Tier_Type_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>