force-app/force-app/main/default/objects/Opportunity/fields/Underwriting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Notes__c</fullName>
    <description>Underwriting Notes - Underwriter comments</description>
    <label>Underwriting Notes</label>
    <type>Text</type>
    <length>32000</length>
</CustomField>