force-app/force-app/main/default/objects/Opportunity/fields/Uses_Third_Party_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Uses_Third_Party_Fulfillment__c</fullName>
    <description>Uses Third Party Fulfillment - Uses 3PL?</description>
    <label>Uses Third Party Fulfillment</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>